{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 976,
  "lineage": "3847de77-2454-19e8-fadf-80602cd0fd39",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "edo_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be1e11f792bd556c",
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:elastic-ip/eipalloc-0be1e11f792bd556c",
            "association_id": "eipassoc-0d9bdb07ff6e7438c",
            "domain": "vpc",
            "id": "eipalloc-0be1e11f792bd556c",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0371dc8b2563ec1e6",
            "private_dns": "ip-10-81-1-124.ap-northeast-1.compute.internal",
            "private_ip": "10.81.1.124",
            "public_dns": "ec2-3-115-197-115.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.115.197.115",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-nat-eip01"
            },
            "tags_all": {
              "Name": "edo-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "edo_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:internet-gateway/igw-023ecfbde25481eec",
            "id": "igw-023ecfbde25481eec",
            "owner_id": "891377135193",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-igw01"
            },
            "tags_all": {
              "Name": "edo-igw01"
            },
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "edo_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "edo-alb-logs-lh-891377135193",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:loadbalancer/app/edo-alb01/1db1477209dd7911",
            "arn_suffix": "app/edo-alb01/1db1477209dd7911",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "edo-alb01-64526109.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:loadbalancer/app/edo-alb01/1db1477209dd7911",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "edo-alb01",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-09b185193fa58a716"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0048df094497b054e"
              },
              {
                "subnet_id": "subnet-02205f870c70f9288"
              },
              {
                "subnet_id": "subnet-071bb09f495bb2bd6"
              }
            ],
            "subnets": [
              "subnet-0048df094497b054e",
              "subnet-02205f870c70f9288",
              "subnet-071bb09f495bb2bd6"
            ],
            "tags": {
              "Name": "edo-alb01"
            },
            "tags_all": {
              "Name": "edo-alb01"
            },
            "vpc_id": "vpc-001f81913f53f1175",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:loadbalancer/app/edo-alb01/1db1477209dd7911"
          },
          "dependencies": [
            "aws_s3_bucket.edo_alb_logs_bucket01",
            "aws_security_group.edo_alb_sg01",
            "aws_subnet.edo_public_subnets",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "edo_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:listener/app/edo-alb01/1db1477209dd7911/ba7e1688fc440328",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:listener/app/edo-alb01/1db1477209dd7911/ba7e1688fc440328",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:loadbalancer/app/edo-alb01/1db1477209dd7911",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:listener/app/edo-alb01/1db1477209dd7911/ba7e1688fc440328"
          },
          "dependencies": [
            "aws_lb.edo_alb01",
            "aws_s3_bucket.edo_alb_logs_bucket01",
            "aws_security_group.edo_alb_sg01",
            "aws_subnet.edo_public_subnets",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "edo_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:targetgroup/edo-tg01/05f60201a2cc9fc2",
            "arn_suffix": "targetgroup/edo-tg01/05f60201a2cc9fc2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:targetgroup/edo-tg01/05f60201a2cc9fc2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "edo-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "edo-tg01"
            },
            "tags_all": {
              "Name": "edo-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:891377135193:targetgroup/edo-tg01/05f60201a2cc9fc2"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "edo_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be1e11f792bd556c",
            "association_id": "eipassoc-0d9bdb07ff6e7438c",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0bd6e4663e2ff295b",
            "network_interface_id": "eni-0371dc8b2563ec1e6",
            "private_ip": "10.81.1.124",
            "public_ip": "3.115.197.115",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0048df094497b054e",
            "tags": {
              "Name": "edo-nat01"
            },
            "tags_all": {
              "Name": "edo-nat01"
            },
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.edo_nat_eip01",
            "aws_internet_gateway.edo_igw01",
            "aws_subnet.edo_public_subnets",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "edo_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ebe23e31bad8192e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bd6e4663e2ff295b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0ebe23e31bad8192e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0ebe23e31bad8192e"
          },
          "dependencies": [
            "aws_eip.edo_nat_eip01",
            "aws_internet_gateway.edo_igw01",
            "aws_nat_gateway.edo_nat01",
            "aws_route_table.edo_private_rt01",
            "aws_subnet.edo_public_subnets",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "edo_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-023ecfbde25481eec",
            "id": "r-rtb-01e207de1ea3cc23b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-01e207de1ea3cc23b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-01e207de1ea3cc23b"
          },
          "dependencies": [
            "aws_internet_gateway.edo_igw01",
            "aws_route_table.edo_public_rt01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "edo_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:route-table/rtb-0ebe23e31bad8192e",
            "id": "rtb-0ebe23e31bad8192e",
            "owner_id": "891377135193",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bd6e4663e2ff295b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "edo-private-rt01"
            },
            "tags_all": {
              "Name": "edo-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "rtb-0ebe23e31bad8192e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "edo_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:route-table/rtb-01e207de1ea3cc23b",
            "id": "rtb-01e207de1ea3cc23b",
            "owner_id": "891377135193",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023ecfbde25481eec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "edo-public-rt01"
            },
            "tags_all": {
              "Name": "edo-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "rtb-01e207de1ea3cc23b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "edo_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfb896755b0ecf21",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0ebe23e31bad8192e",
            "subnet_id": "subnet-0cfdc7c71090c244d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.edo_private_rt01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c847a01fc769a45",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0ebe23e31bad8192e",
            "subnet_id": "subnet-08168d025c22213f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.edo_private_rt01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e089012bbc0409e",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0ebe23e31bad8192e",
            "subnet_id": "subnet-08141a3c624b3dbea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.edo_private_rt01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "edo_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08479ea9afaf99240",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-01e207de1ea3cc23b",
            "subnet_id": "subnet-0048df094497b054e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.edo_public_rt01",
            "aws_subnet.edo_public_subnets",
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b4d64ccd96be494",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-01e207de1ea3cc23b",
            "subnet_id": "subnet-02205f870c70f9288"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.edo_public_rt01",
            "aws_subnet.edo_public_subnets",
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0792d6c40089506a2",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-01e207de1ea3cc23b",
            "subnet_id": "subnet-071bb09f495bb2bd6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.edo_public_rt01",
            "aws_subnet.edo_public_subnets",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edo_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group/sg-09b185193fa58a716",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b185193fa58a716",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-58a04531"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "edo-alb-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edo-alb-sg01"
            },
            "tags_all": {
              "Name": "edo-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-09b185193fa58a716",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edo_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group/sg-098606ea2f4ffa13e",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098606ea2f4ffa13e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09b185193fa58a716"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "edo-ec2-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edo-ec2-sg01"
            },
            "tags_all": {
              "Name": "edo-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-098606ea2f4ffa13e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edo_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group/sg-0a25e40dada084eeb",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a25e40dada084eeb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL access only from app tier EC2 instances",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098606ea2f4ffa13e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "edo-rds-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edo-rds-sg01"
            },
            "tags_all": {
              "Name": "edo-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-0a25e40dada084eeb",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edo_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group/sg-08663df0278f368c8",
            "description": "SG for VPC Interface Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08663df0278f368c8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow EC2 SG access only for 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098606ea2f4ffa13e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "edo-vpce-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edo-vpce-sg01"
            },
            "tags_all": {
              "Name": "edo-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-08663df0278f368c8",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "edo_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:subnet/subnet-0cfdc7c71090c244d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.81.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfdc7c71090c244d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-private-subnet01"
            },
            "tags_all": {
              "Name": "edo-private-subnet01"
            },
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-0cfdc7c71090c244d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:subnet/subnet-08168d025c22213f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.81.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08168d025c22213f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-private-subnet02"
            },
            "tags_all": {
              "Name": "edo-private-subnet02"
            },
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-08168d025c22213f5",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:subnet/subnet-08141a3c624b3dbea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.81.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08141a3c624b3dbea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-private-subnet03"
            },
            "tags_all": {
              "Name": "edo-private-subnet03"
            },
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-08141a3c624b3dbea",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "edo_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:subnet/subnet-0048df094497b054e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.81.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0048df094497b054e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-public-subnet01"
            },
            "tags_all": {
              "Name": "edo-public-subnet01"
            },
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-0048df094497b054e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:subnet/subnet-02205f870c70f9288",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.81.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02205f870c70f9288",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-public-subnet02"
            },
            "tags_all": {
              "Name": "edo-public-subnet02"
            },
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-02205f870c70f9288",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:subnet/subnet-071bb09f495bb2bd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.81.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071bb09f495bb2bd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-public-subnet03"
            },
            "tags_all": {
              "Name": "edo-public-subnet03"
            },
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-071bb09f495bb2bd6",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "edo_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc/vpc-001f81913f53f1175",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.81.0.0/16",
            "default_network_acl_id": "acl-0010e997bcd836e9c",
            "default_route_table_id": "rtb-08667dcf2954a597f",
            "default_security_group_id": "sg-051eced64cbe9f476",
            "dhcp_options_id": "dopt-06001cad9a135c512",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001f81913f53f1175",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08667dcf2954a597f",
            "owner_id": "891377135193",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "edo-vpc01"
            },
            "tags_all": {
              "Name": "edo-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpc-001f81913f53f1175",
            "region": "ap-northeast-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "edo_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc-endpoint/vpce-0d575581ac1d4bf9c",
            "dns_entry": [
              {
                "dns_name": "vpce-0d575581ac1d4bf9c-jmuekadu.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d575581ac1d4bf9c-jmuekadu-ap-northeast-1d.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d575581ac1d4bf9c-jmuekadu-ap-northeast-1a.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d575581ac1d4bf9c-jmuekadu-ap-northeast-1c.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ec2messages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z05078082X0XX09SNVA5H"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d575581ac1d4bf9c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-010baef7cac33cfab",
              "eni-05c7113aaa2949058",
              "eni-0f96154b0378718ca"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08663df0278f368c8"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2messages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.81.101.206",
                "subnet_id": "subnet-0cfdc7c71090c244d"
              },
              {
                "ipv4": "10.81.102.204",
                "subnet_id": "subnet-08168d025c22213f5"
              },
              {
                "ipv4": "10.81.103.87",
                "subnet_id": "subnet-08141a3c624b3dbea"
              }
            ],
            "subnet_ids": [
              "subnet-08141a3c624b3dbea",
              "subnet-08168d025c22213f5",
              "subnet-0cfdc7c71090c244d"
            ],
            "tags": {
              "Name": "edo-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "edo-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0d575581ac1d4bf9c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_vpce_sg01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01",
            "data.aws_region.edo_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "edo_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc-endpoint/vpce-0e6e8e30c2cf1e9b1",
            "dns_entry": [
              {
                "dns_name": "vpce-0e6e8e30c2cf1e9b1-vakmcqi6.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0e6e8e30c2cf1e9b1-vakmcqi6-ap-northeast-1a.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0e6e8e30c2cf1e9b1-vakmcqi6-ap-northeast-1c.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0e6e8e30c2cf1e9b1-vakmcqi6-ap-northeast-1d.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "kms.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z05121962W067LQ7KBVVN"
              },
              {
                "dns_name": "kms.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z02187713Q9SN9XK3V2NB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e6e8e30c2cf1e9b1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-047c7b2a9d8322ae0",
              "eni-053c6c1684265508f",
              "eni-09fef38e248ddd971"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08663df0278f368c8"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.kms",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.81.101.249",
                "subnet_id": "subnet-0cfdc7c71090c244d"
              },
              {
                "ipv4": "10.81.102.182",
                "subnet_id": "subnet-08168d025c22213f5"
              },
              {
                "ipv4": "10.81.103.207",
                "subnet_id": "subnet-08141a3c624b3dbea"
              }
            ],
            "subnet_ids": [
              "subnet-08141a3c624b3dbea",
              "subnet-08168d025c22213f5",
              "subnet-0cfdc7c71090c244d"
            ],
            "tags": {
              "Name": "edo-vpce-kms01"
            },
            "tags_all": {
              "Name": "edo-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0e6e8e30c2cf1e9b1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_vpce_sg01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01",
            "data.aws_region.edo_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "edo_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc-endpoint/vpce-043b55bcf1b0d8a0d",
            "dns_entry": [
              {
                "dns_name": "vpce-043b55bcf1b0d8a0d-uy7h6m6f.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-043b55bcf1b0d8a0d-uy7h6m6f-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-043b55bcf1b0d8a0d-uy7h6m6f-ap-northeast-1d.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-043b55bcf1b0d8a0d-uy7h6m6f-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z05134163K8BXNHLQA0U1"
              },
              {
                "dns_name": "logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z051263818GMOZ2BH0N0X"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z04186397S8HYGO16L2P"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0513423TU7838VPXDQT"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-043b55bcf1b0d8a0d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-095e219919de2ef65",
              "eni-0ab7b766e90d8b200",
              "eni-0d3421ea39dac419a"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08663df0278f368c8"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.81.101.215",
                "subnet_id": "subnet-0cfdc7c71090c244d"
              },
              {
                "ipv4": "10.81.102.238",
                "subnet_id": "subnet-08168d025c22213f5"
              },
              {
                "ipv4": "10.81.103.236",
                "subnet_id": "subnet-08141a3c624b3dbea"
              }
            ],
            "subnet_ids": [
              "subnet-08141a3c624b3dbea",
              "subnet-08168d025c22213f5",
              "subnet-0cfdc7c71090c244d"
            ],
            "tags": {
              "Name": "edo-vpce-logs01"
            },
            "tags_all": {
              "Name": "edo-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-043b55bcf1b0d8a0d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_vpce_sg01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01",
            "data.aws_region.edo_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "edo_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc-endpoint/vpce-072ea78f74c4f1054",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.20.0/23",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-072ea78f74c4f1054",
            "ip_address_type": "ipv4",
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0ebe23e31bad8192e"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "edo-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "edo-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-072ea78f74c4f1054",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.edo_private_rt01",
            "aws_vpc.edo_vpc01",
            "data.aws_region.edo_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "edo_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc-endpoint/vpce-0767db4a1196792e2",
            "dns_entry": [
              {
                "dns_name": "vpce-0767db4a1196792e2-lict8k4h.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0767db4a1196792e2-lict8k4h-ap-northeast-1d.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0767db4a1196792e2-lict8k4h-ap-northeast-1a.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0767db4a1196792e2-lict8k4h-ap-northeast-1c.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "secretsmanager.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z05065371NU5TRYH1ZHMF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0767db4a1196792e2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07550bd3131d07c42",
              "eni-0bb80b521b69eda64",
              "eni-0c50fd35ac91fedaa"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08663df0278f368c8"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.secretsmanager",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.81.101.115",
                "subnet_id": "subnet-0cfdc7c71090c244d"
              },
              {
                "ipv4": "10.81.102.191",
                "subnet_id": "subnet-08168d025c22213f5"
              },
              {
                "ipv4": "10.81.103.118",
                "subnet_id": "subnet-08141a3c624b3dbea"
              }
            ],
            "subnet_ids": [
              "subnet-08141a3c624b3dbea",
              "subnet-08168d025c22213f5",
              "subnet-0cfdc7c71090c244d"
            ],
            "tags": {
              "Name": "edo-vpce-secrets01"
            },
            "tags_all": {
              "Name": "edo-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0767db4a1196792e2",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_vpce_sg01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01",
            "data.aws_region.edo_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "edo_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc-endpoint/vpce-09b36b8dc7303fd96",
            "dns_entry": [
              {
                "dns_name": "vpce-09b36b8dc7303fd96-blkfwyp2.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-09b36b8dc7303fd96-blkfwyp2-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-09b36b8dc7303fd96-blkfwyp2-ap-northeast-1c.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-09b36b8dc7303fd96-blkfwyp2-ap-northeast-1d.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z04179183V10A14XPXFC8"
              },
              {
                "dns_name": "ssm.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z021965518BF4PUUN3BRY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09b36b8dc7303fd96",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0ac8bbebb5c3a329a",
              "eni-0ad0360180734164c",
              "eni-0d798ae4d12cd377f"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08663df0278f368c8"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.81.101.8",
                "subnet_id": "subnet-0cfdc7c71090c244d"
              },
              {
                "ipv4": "10.81.102.59",
                "subnet_id": "subnet-08168d025c22213f5"
              },
              {
                "ipv4": "10.81.103.182",
                "subnet_id": "subnet-08141a3c624b3dbea"
              }
            ],
            "subnet_ids": [
              "subnet-08141a3c624b3dbea",
              "subnet-08168d025c22213f5",
              "subnet-0cfdc7c71090c244d"
            ],
            "tags": {
              "Name": "edo-vpce-ssm01"
            },
            "tags_all": {
              "Name": "edo-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-09b36b8dc7303fd96",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_vpce_sg01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01",
            "data.aws_region.edo_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "edo_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:vpc-endpoint/vpce-05a36136621a3d990",
            "dns_entry": [
              {
                "dns_name": "vpce-05a36136621a3d990-siaky48j.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-05a36136621a3d990-siaky48j-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-05a36136621a3d990-siaky48j-ap-northeast-1d.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-05a36136621a3d990-siaky48j-ap-northeast-1c.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z04195371DGU5ZU6RT7TC"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z05075986540VTK82YWD"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05a36136621a3d990",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-089bc70e9088b1178",
              "eni-0b6333e396537393c",
              "eni-0c212dc1a119bdaed"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08663df0278f368c8"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.81.101.233",
                "subnet_id": "subnet-0cfdc7c71090c244d"
              },
              {
                "ipv4": "10.81.102.136",
                "subnet_id": "subnet-08168d025c22213f5"
              },
              {
                "ipv4": "10.81.103.101",
                "subnet_id": "subnet-08141a3c624b3dbea"
              }
            ],
            "subnet_ids": [
              "subnet-08141a3c624b3dbea",
              "subnet-08168d025c22213f5",
              "subnet-0cfdc7c71090c244d"
            ],
            "tags": {
              "Name": "edo-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "edo-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-001f81913f53f1175"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-05a36136621a3d990",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_vpce_sg01",
            "aws_subnet.edo_private_subnets",
            "aws_vpc.edo_vpc01",
            "data.aws_region.edo_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-0bfd8ee2a063d5834",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0bfd8ee2a063d5834",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-098606ea2f4ffa13e",
            "security_group_rule_id": "sgr-0bfd8ee2a063d5834",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0bfd8ee2a063d5834",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_ec2_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "edo_alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-05186a614aaaccb48",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05186a614aaaccb48",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-09b185193fa58a716",
            "security_group_rule_id": "sgr-05186a614aaaccb48",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-05186a614aaaccb48",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_alb_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-082d31a686cb7a21b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-082d31a686cb7a21b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0a25e40dada084eeb",
            "security_group_rule_id": "sgr-082d31a686cb7a21b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-082d31a686cb7a21b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_rds_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpce_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-01c25dc2e5e690590",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-01c25dc2e5e690590",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-08663df0278f368c8",
            "security_group_rule_id": "sgr-01c25dc2e5e690590",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-01c25dc2e5e690590",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_vpce_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "edo_alb_ingres_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-08409bc11bd1b9fb6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-08409bc11bd1b9fb6",
            "ip_protocol": "tcp",
            "prefix_list_id": "pl-58a04531",
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-09b185193fa58a716",
            "security_group_rule_id": "sgr-08409bc11bd1b9fb6",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-08409bc11bd1b9fb6",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_alb_sg01",
            "aws_vpc.edo_vpc01",
            "data.aws_ec2_managed_prefix_list.edo_cf_origin_facing01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "edo_alb_ingres_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-0e9400d8565506e64",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0e9400d8565506e64",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-09b185193fa58a716",
            "security_group_rule_id": "sgr-0e9400d8565506e64",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0e9400d8565506e64",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_alb_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "edo_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-0338e1ee88d5c6bb9",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0338e1ee88d5c6bb9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09b185193fa58a716",
            "region": "ap-northeast-1",
            "security_group_id": "sg-098606ea2f4ffa13e",
            "security_group_rule_id": "sgr-0338e1ee88d5c6bb9",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0338e1ee88d5c6bb9",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_alb_sg01",
            "aws_security_group.edo_ec2_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "edo_rds_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-08bd999c794824e00",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL access only from app tier EC2 instances",
            "from_port": 3306,
            "id": "sgr-08bd999c794824e00",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-098606ea2f4ffa13e",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0a25e40dada084eeb",
            "security_group_rule_id": "sgr-08bd999c794824e00",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-08bd999c794824e00",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_ec2_sg01",
            "aws_security_group.edo_rds_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "edo_vpce_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891377135193:security-group-rule/sgr-02a3bb7e8d28a7bec",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow EC2 SG access only for 443",
            "from_port": 443,
            "id": "sgr-02a3bb7e8d28a7bec",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-098606ea2f4ffa13e",
            "region": "ap-northeast-1",
            "security_group_id": "sg-08663df0278f368c8",
            "security_group_rule_id": "sgr-02a3bb7e8d28a7bec",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-02a3bb7e8d28a7bec",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.edo_ec2_sg01",
            "aws_security_group.edo_vpce_sg01",
            "aws_vpc.edo_vpc01"
          ]
        }
      ]
    }
  ]
}